--- a/www/package.json
+++ b/www/package.json
@@ -1,7 +1,7 @@
 {
   "name": "full-stack-template-www",
   "scripts": {
-    "install-site": "if [ -f ./site/package-lock.json ]; then cd site && npm ci; elif [ -f ./site/package.json ]; then cd site && npm install; fi",
+    "install-site": "if [ -f ./site/package-lock.json ]; then cd site && mkdir -p node_modules && npm ci; elif [ -f ./site/package.json ]; then cd site && mkdir -p node_modules && npm install; fi",
     "lint": "echo Linting disabled",
     "unit": "if [ -d ./site ]; then cd site && npm run test; fi",
     "test": "echo No tests for www",
