fix: support for running single unit test by name

--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "taito-host-lint:worker": "cd worker && npm-run-all lint",
     "taito-host-lint:www": "cd www && npm-run-all lint",
     "unit": "echo Running unit tests locally && npm-run-all -p -c unit:admin unit:client unit:server unit:worker unit:www ",
-    "unit:admin": "cd admin && npm-run-all unit",
-    "unit:client": "cd client && npm-run-all unit",
-    "unit:server": "cd server && npm-run-all unit",
-    "unit:worker": "cd worker && npm-run-all unit",
-    "unit:www": "cd www && npm-run-all unit",
+    "unit:admin": "cd admin && npm-run-all 'unit {@}' --",
+    "unit:client": "cd client && npm-run-all 'unit {@}' --",
+    "unit:server": "cd server && npm-run-all 'unit {@}' --",
+    "unit:worker": "cd worker && npm-run-all 'unit {@}' --",
+    "unit:www": "cd www && npm-run-all 'unit {@}' --",
     "test": "npm-run-all test:admin test:client test:server test:worker test:www ",
     "test:admin": "taito ${taito_options} util test:admin:${taito_env}",
     "test:client": "taito ${taito_options} util test:client:${taito_env}",
