feat: speed up unit tests by running the on host

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "taito-host-lint:server": "cd server && npm-run-all lint",
     "taito-host-lint:worker": "cd worker && npm-run-all lint",
     "taito-host-lint:www": "cd www && npm-run-all lint",
-    "unit": "echo Running unit tests locally && npm-run-all -p -c unit:admin unit:client unit:server unit:worker unit:www ",
-    "unit:admin": "cd admin && npm-run-all 'unit {@}' --",
-    "unit:client": "cd client && npm-run-all 'unit {@}' --",
-    "unit:server": "cd server && npm-run-all 'unit {@}' --",
-    "unit:worker": "cd worker && npm-run-all 'unit {@}' --",
-    "unit:www": "cd www && npm-run-all 'unit {@}' --",
+    "taito-host-unit": "echo Running unit tests locally && npm-run-all -p -c taito-host-unit:admin taito-host-unit:client taito-host-unit:server taito-host-unit:worker taito-host-unit:www ",
+    "taito-host-unit:admin": "cd admin && npm-run-all 'unit {@}' --",
+    "taito-host-unit:client": "cd client && npm-run-all 'unit {@}' --",
+    "taito-host-unit:server": "cd server && npm-run-all 'unit {@}' --",
+    "taito-host-unit:worker": "cd worker && npm-run-all 'unit {@}' --",
+    "taito-host-unit:www": "cd www && npm-run-all 'unit {@}' --",
     "test": "npm-run-all test:admin test:client test:server test:worker test:www ",
     "test:admin": "taito ${taito_options} util test:admin:${taito_env}",
     "test:client": "taito ${taito_options} util test:client:${taito_env}",
@@ -65,7 +65,7 @@
     "precommit:lint": "echo 'SKIP: Skipping linting on commit since we are already continuously linting during development.'",
     "husky:commit-msg": "commitlint --edit",
     "husky:pre-commit": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all precommit:branch precommit:lint; fi",
-    "husky:pre-push": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all --parallel generate taito-host-lint unit; fi",
+    "husky:pre-push": "if [ \"$taito_mode\" != 'ci' ]; then npm-run-all --parallel generate taito-host-lint taito-host-unit; fi",
     "release-pre:prod": "semantic-release --dry-run",
     "release-post:prod": "semantic-release --no-ci"
   },
