--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -48,6 +48,8 @@ services:
     build:
       context: ./client
       dockerfile: ${dockerfile}
+      args:
+        USER_UID: ${taito_host_user_uid}
     restart: unless-stopped
     networks:
       - default
