--- a/alternatives/server-flask/Dockerfile
+++ b/alternatives/server-flask/Dockerfile
@@ -10,18 +10,24 @@ RUN apk add --update-cache \
   postgresql-dev \
   python3-dev
 
-RUN mkdir -p /develop
+# Init /develop for user USER_UID
+ARG USER_UID=1001
+RUN adduser -u "${USER_UID}" -G root -S developer 
+RUN mkdir -p /develop && \
+  chown "${USER_UID}:0" /develop
 WORKDIR /develop
+USER "${USER_UID}"
 
 ARG SERVICE_DIR=.
 
-COPY ${SERVICE_DIR}/requirements-dev.txt /develop/
+COPY --chown="${USER_UID}:0" \
+  ${SERVICE_DIR}/requirements-dev.txt /develop/
 RUN pip3 install --upgrade pip pip-tools debugpy
 RUN pip3 install -r requirements-dev.txt
 
 EXPOSE 8080
 CMD pip-compile requirements-dev.in; \
-    pip-compile requirements-prod.in; \
-    pip3 install -r requirements-dev.txt; \
-    python -m debugpy --listen 0.0.0.0:9229 -m \
-      flask run --host $API_BINDADDR --port $API_PORT --no-debugger
+  pip-compile requirements-prod.in; \
+  pip3 install -r requirements-dev.txt; \
+  python -m debugpy --listen 0.0.0.0:9229 -m \
+  flask run --host $API_BINDADDR --port $API_PORT --no-debugger
