--- a/alternatives/server-micronaut-java/Dockerfile
+++ b/alternatives/server-micronaut-java/Dockerfile
@@ -1,11 +1,17 @@
 # For local development
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
 
-RUN mkdir -p /develop
+# Init /develop for user USER_UID
+ARG USER_UID=1001
+RUN adduser -u "${USER_UID}" -G root -S developer 
+RUN mkdir -p /develop && \
+    chown "${USER_UID}:0" /develop
 WORKDIR /develop
+USER "${USER_UID}"
 
 ARG SERVICE_DIR=.
-COPY ${SERVICE_DIR} /develop
+COPY --chown="${USER_UID}:0" \
+    ${SERVICE_DIR} /develop
 # ENV GRADLE_OPTS "--project-cache-dir /.gradle"
 RUN ./gradlew
 
