fix: skip developer add if already exists

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ FROM node:lts-alpine
 
 # Init /develop for user USER_UID
 ARG USER_UID=1001
-RUN adduser -u "${USER_UID}" -G root -S developer 
+RUN adduser -u "${USER_UID}" -G root -S developer || :
 RUN mkdir -p /develop && \
      chown "${USER_UID}:0" /develop
 WORKDIR /develop
