--- a/alternatives/client-static/Dockerfile
+++ b/alternatives/client-static/Dockerfile
@@ -3,7 +3,7 @@ FROM nginx:stable-alpine
 
 # Init /develop for user USER_UID
 ARG USER_UID=1001
-RUN adduser -u "${USER_UID}" -G root -S developer 
+RUN adduser -u "${USER_UID}" -G root -S developer || : 
 RUN mkdir -p /develop && \
     chown "${USER_UID}:0" /develop
 WORKDIR /develop
