--- a/alternatives/server-flask/Dockerfile
+++ b/alternatives/server-flask/Dockerfile
@@ -12,7 +12,7 @@ RUN apk add --update-cache \
 
 # Init /develop for user USER_UID
 ARG USER_UID=1001
-RUN adduser -u "${USER_UID}" -G root -S developer 
+RUN adduser -u "${USER_UID}" -G root -S developer || : 
 RUN mkdir -p /develop && \
   chown "${USER_UID}:0" /develop
 WORKDIR /develop
