chore: helm chart 3.19.0

--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -54,7 +54,7 @@ full-stack:
 
     client:
       paths:
-        - path:
+        - path: /
       cpuRequest: 2m
       memoryRequest: 2Mi
       env:
