--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -132,14 +132,12 @@ services:
       DATABASE_SSL_SERVER_CERT_ENABLED: "${db_database_ssl_server_cert_enabled}"
       REDIS_HOST: full-stack-template-redis
       REDIS_PORT: 6379
-      BUCKET_URL: http://full-stack-template-storage:9000/
-      BUCKET_REGION: milkyway
       BUCKET_BUCKET: bucket
-      BUCKET_BROWSE_URL: http://localhost:9729/bucket   # TODO
-      BUCKET_DOWNLOAD_URL: http://localhost:9729/bucket # TODO
+      BUCKET_REGION: milkyway
+      BUCKET_ENDPOINT: http://full-stack-template-storage:9000/
+      BUCKET_FORCE_PATH_STYLE: 'true'
       BUCKET_KEY_ID: minio
       BUCKET_KEY_SECRET: ${taito_default_password}
-      BUCKET_FORCE_PATH_STYLE: 'true'
 
   full-stack-template-worker:
     container_name: full-stack-template-worker
@@ -188,14 +186,12 @@ services:
       DATABASE_SSL_SERVER_CERT_ENABLED: "${db_database_ssl_server_cert_enabled}"
       REDIS_HOST: full-stack-template-redis
       REDIS_PORT: 6379
-      BUCKET_URL: http://full-stack-template-storage:9000/
-      BUCKET_REGION: milkyway
       BUCKET_BUCKET: bucket
-      BUCKET_BROWSE_URL: http://localhost:9729/bucket   # TODO
-      BUCKET_DOWNLOAD_URL: http://localhost:9729/bucket # TODO
+      BUCKET_REGION: milkyway
+      BUCKET_ENDPOINT: http://full-stack-template-storage:9000/
+      BUCKET_FORCE_PATH_STYLE: 'true'
       BUCKET_KEY_ID: minio
       BUCKET_KEY_SECRET: ${taito_default_password}
-      BUCKET_FORCE_PATH_STYLE: 'true'
 
   full-stack-template-www:
     container_name: full-stack-template-www
