--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -107,5 +107,22 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+
+        location /bucket {
+            client_max_body_size 20m;
+
+            proxy_pass http://full-stack-template-storage:9000;
+            proxy_http_version 1.1;
+
+            proxy_redirect off;
+
+            # Headers
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
     }
 }
