--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -124,5 +124,23 @@ http {
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
         }
+
+        # location /pgweb {
+        #     client_max_body_size 20m;
+        # 
+        #     proxy_pass http://full-stack-template-pgweb:8080;
+        #     proxy_http_version 1.1;
+        # 
+        #     proxy_redirect off;
+        # 
+        #     # Headers
+        #     proxy_set_header X-Real-IP  $remote_addr;
+        #     proxy_set_header X-Forwarded-For $remote_addr;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection 'upgrade';
+        #     proxy_set_header Host $host;
+        #     proxy_cache_bypass $http_upgrade;
+        # }
+
     }
 }
