feat(client): replace webpack with vite and update dependencies

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,10 +7,11 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
     "jsx": "react-jsx",
-    "lib": ["esnext", "dom", "dom.iterable"],
-    "module": "esnext",
-    "moduleResolution": "node",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
@@ -19,7 +20,7 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": false,
-    "target": "es5",
+    "target": "ESNext",
     "paths": {
       "~constants/*": ["src/constants/*"],
       "~services/*": ["src/services/*"],
