--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -24,7 +24,7 @@ ENV API_URL /api
 ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
 
 RUN npm run unit
-RUN npm run build && cp -r ./assets/* /build/
+RUN npm run build
 
 # Production runtime
 FROM nginx:stable-alpine
@@ -46,11 +46,10 @@ COPY ./nginx.conf /etc/nginx
 COPY --from=builder /build .
 
 # Move source maps to /meta by default
-RUN mkdir /meta && mv *.map /meta
+RUN mkdir /meta && find . -name '*.map' -exec mv {} /meta \;
 
 # Give nginx modify rights to some files that are modified at startup
 RUN find . -name '*.html' -exec chown nginx:nginx {} \; && \
-    find . -name 'runtime.*.js' -exec chown nginx:nginx {} \; && \
     find . -name 'manifest.json' -exec chown nginx:nginx {} \;
 
 # Startup
