--- a/client/package.json
+++ b/client/package.json
@@ -87,7 +87,7 @@
     "eslint-config-standard": "17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-lodash": "7.4.0",
-    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-n": "15.2.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.30.0",
