--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "@graphql-codegen/typescript": "2.4.11",
     "@graphql-codegen/typescript-operations": "2.4.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.14",
+    "@lingui/cli": "3.13.3",
     "@optimize-lodash/rollup-plugin": "3.0.0",
     "@rollup/plugin-strip": "2.1.0",
     "@storybook/addon-actions": "6.5.5",
