--- a/client/package.json
+++ b/client/package.json
@@ -102,7 +102,8 @@
     "storybook-dark-mode": "1.1.0",
     "typescript": "4.7.2",
     "vite": "2.9.9",
-    "vite-plugin-favicon2": "1.1.4"
+    "vite-plugin-favicon2": "1.1.4",
+    "vite-tsconfig-paths": "3.5.0"
   },
   "babel_comment": "Babel is only needed for LinguiJS message extraction and testing with Jest",
   "babel": {
