--- a/client/package.json
+++ b/client/package.json
@@ -98,7 +98,7 @@
     "pg-promise": "10.11.1",
     "prettier": "2.6.2",
     "rollup-plugin-minify-html-literals": "1.2.6",
-    "source-map-loader": "3.0.1",
+    "source-map-explorer": "2.5.2",
     "storybook-dark-mode": "1.1.0",
     "typescript": "4.7.2",
     "vite": "2.9.9",
