--- a/alternatives/server-symfony/docker/nginx/nginx.conf
+++ b/alternatives/server-symfony/docker/nginx/nginx.conf
@@ -50,7 +50,7 @@ http {
         error_page 404 /index.php;
 
         location ~ \.php$ {
-            fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
+            fastcgi_pass unix:/var/run/php/php-fpm.sock;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             include fastcgi_params;
