fix(symfony): nginx.conf SCRIPT_FILENAME

--- a/alternatives/server-symfony/docker/nginx/nginx.conf
+++ b/alternatives/server-symfony/docker/nginx/nginx.conf
@@ -35,25 +35,27 @@ http {
 
         # Serve static files
         root                    /service;
-        index                   index.html index.htm index.php;
-
-        client_max_body_size 75M;
-        charset utf-8;
+        index                   index.php index.html index.htm;
 
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
-        location = /favicon.ico { access_log off; log_not_found off; }
-        location = /robots.txt  { access_log off; log_not_found off; }
+        location ~ [^/]\.php(/|$) {
+            fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+            if (!-f $document_root$fastcgi_script_name) {
+                return 404;
+            }
 
-        error_page 404 /index.php;
+            # Mitigate https://httpoxy.org/ vulnerabilities
+            fastcgi_param HTTP_PROXY "";
 
-        location ~ \.php$ {
             fastcgi_pass unix:/var/run/php/php-fpm.sock;
             fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+
             include fastcgi_params;
+
+            fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
         }
 
         location ~ /\.(?!well-known).* {
@@ -64,13 +66,5 @@ http {
             access_log off;
             return 200;
         }
-
-        fastcgi_connect_timeout 300;
-        fastcgi_read_timeout 300;
-        fastcgi_send_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_read_timeout 300;
-        proxy_send_timeout 300;
-        send_timeout 300;
     }
 }
