chore(symfony): routing fix example

--- a/alternatives/server-symfony/docker/nginx/nginx.conf
+++ b/alternatives/server-symfony/docker/nginx/nginx.conf
@@ -56,6 +56,12 @@ http {
             include fastcgi_params;
 
             fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
+
+            # NOTE: You might need to set these to avoid symfony routing problems
+            # fastcgi_param SERVER_NAME localhost;
+            # fastcgi_param SERVER_PORT 8080;
+            # fastcgi_param SERVER_PROTOCOL http;
+            # fastcgi_param HTTPS off;
         }
 
         location ~ /\.(?!well-known).* {
