--- a/client/Dockerfile.build
+++ b/client/Dockerfile.build
@@ -24,6 +24,7 @@ ENV API_URL /api
 ENV APP_SENTRY_PUBLIC_DSN #sentryPublicDSN
 
 RUN npm run unit
+RUN npm run lang:compile
 RUN npm run build
 
 # Production runtime
