wip: auth example

--- a/server/package.json
+++ b/server/package.json
@@ -25,11 +25,13 @@
     "@sentry/node": "~6.17.3",
     "apollo-server-koa": "~2.25.1",
     "axios": "0.25.0",
+    "bcrypt": "5.0.1",
     "bunyan": "~1.8.15",
     "class-validator": "~0.13.2",
     "graphql": "~15.8.0",
     "koa": "~2.13.4",
     "koa-joi-router": "~8.0.0",
+    "koa-jwt": "4.0.3",
     "koa-qs": "~3.0.0",
     "mustache": "~4.2.0",
     "pg-promise": "~10.11.1",
@@ -48,6 +50,7 @@
     "@graphql-codegen/typescript-graphql-request": "~4.3.3",
     "@graphql-codegen/typescript-operations": "~2.2.2",
     "@graphql-codegen/typescript-resolvers": "~2.4.3",
+    "@types/bcrypt": "5.0.0",
     "@types/bunyan": "~1.8.8",
     "@types/jest": "~27.4.0",
     "@types/joi": "~17.2.3",
