--- a/server/package.json
+++ b/server/package.json
@@ -28,10 +28,12 @@
     "bunyan": "~1.8.15",
     "class-validator": "~0.13.2",
     "graphql": "~15.8.0",
+    "joi-to-swagger": "^6.1.1",
     "koa": "~2.13.4",
     "koa-joi-router": "~8.0.0",
     "koa-qs": "~3.0.0",
     "mustache": "~4.2.0",
+    "openapi-types": "^12.0.2",
     "pg-promise": "~10.11.1",
     "reflect-metadata": "0.1.13",
     "serverless-http": "~2.7.0",
