--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -138,7 +138,7 @@ services:
       BUCKET_FORCE_PATH_STYLE: 'true'
       BUCKET_KEY_ID: minio
       BUCKET_KEY_SECRET: ${taito_default_password}
-      # Enable REST api docs (/api/docs) and GraphQL playground in local environment
+      # Enable api docs and GraphQL/Swagger playground in local environment
       API_DOCS_ENABLED: true
       API_PLAYGROUND_ENABLED: true
 
