--- a/scripts/helm-dev.yaml
+++ b/scripts/helm-dev.yaml
@@ -4,6 +4,6 @@ full-stack:
   services:
     server:
       env:
-        # Uncomment to enable REST API docs and GraphQL playground on dev
+        # Uncomment to enable API docs and GraphQL/Swagger playground on dev
         # API_DOCS_ENABLED: true
         # API_PLAYGROUND_ENABLED: true
